
2022-12-02  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: tarstamp.h may now be created on base of VSCDATE or
	  FILEDATE, to override specify FILEDATE=false
	* Makefile.am: tarstamp.h creation more portable, using fallback
	  of current date

2022-12-01  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: fixed dependencies, especially for tarstamp.h

2022-11-04  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: support BDB_CFLAGS to specify necessary flags like
	  non-default include directory
	* configure.ac: drop check for PDC_free_memory_allocations as that
	  function was removed from PDCursesMod

2022-10-22  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: version 3.2-preview

2022-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: cache several checks, also allowing to override its results
	  via gc_cv_keyword_inline, gc_cv_time_timezone, gc_cv_designated_inits,
	  gc_cv_attribute_alligned, gc_cv_attribute_pure, gc_cv_gcc_pipe
	* configure.ac: check ncurses.h also for ncursesw (fixing OpenBSD builds)
	* Makefile.am (CODE_COVERAGE_IGNORE_PATTERN): ignore generated files

2022-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* HACKING: add notes for testing compatibility with GnuCOBOL modules
	  generated by an earlier version of GnuCOBOL

2022-09-21  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: dropped extra check for GCC as done internally

2022-09-08  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: cleanup curses library check

2022-07-27  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for ncursesw first, then ncurses;
	  in case of ncurses check for ncurses.h again

2022-07-10  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for PDC_free_memory_allocations

2022-07-06  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* configure.ac: Check for __attribute__((pure))

2022-06-06  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac (COB_CFLAGS): handle -ggdb options correctly
